--- a/paginas/pagina2.html
+++ b/paginas/pagina2.html
@@ -5,7 +5,6 @@
 
 	<title>ALMA ANIMAL</title>
 
-	<link rel="stylesheet" type="text/css" href="../css/estilonuevo.css">
 	<link rel="icon" href="../imagenes/logo.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +14,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/estilonuevo.css">
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<img src="../imagenes/logo.png" alt="logo" id="logo">
 		<h1 id="titulo"> Alma Animal</h1>
 		<nav class="navheader">
@@ -27,8 +27,8 @@
 		</nav>
 	</div>
 	<div id=main2>
-		<h4> CONTACTATE CON NOSOTROS </h4>
-		<h5> Para consultas por futuras adopciones, dudas acerca de la organización de la protectora y/o actividades en las que te interese participar o colaborar, dejanos un mensaje por esta vía y al término de 5 días hábiles te llegará nuestra respuesta al e-mail. Gracias !!</h5>
+		<h2 class="titulo4"> CONTACTATE CON NOSOTROS </h2>
+		<h3 class="titulo5"> Para consultas por futuras adopciones, dudas acerca de la organización de la protectora y/o actividades en las que te interese participar o colaborar, dejanos un mensaje por esta vía y al término de 5 días hábiles te llegará nuestra respuesta al e-mail. Gracias !!</h3>
 		<form id="formulario">
 			<label for="Nombre"> Nombre/s: </label>
 			<input type="text" name="Nombre">
