--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 	
-	<link rel="stylesheet" type="text/css" href="css/estilonuevo.css">
 	<link rel="icon" href="imagenes/logo.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,9 +15,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@1,300&display=swap" rel="stylesheet">	
+	<link rel="stylesheet" type="text/css" href="css/estilonuevo.css">
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<img src="imagenes/logo.png" alt="logo" id="logo">
 		<h1 id="titulo"> Alma Animal</h1>
 		<nav class="navheader">
