--- a/paginas/pagina2.html
+++ b/paginas/pagina2.html
@@ -3,10 +3,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>ALMA ANIMAL</title>
+	<title>CONTACTO</title>
 
 	<link rel="icon" href="../imagenes/logo.png">
-
+	<meta name="keywords" content="ANIMALES, ANIMALISTAS, PERROS, GATOS, ADOPCION, TRANSITO">
+	<meta property="og:image" content="../imagenes/logo.png">
+	<meta property="og:description" content="Alma Animal, organización sin fines de lucro que busca voluntarios y donaciones para la esterilización y el rescate de animales en estado de abandono">
+	<meta propety="og:url" content="https://alma-animal.netlify.app/">
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shantell+Sans&display=swap" rel="stylesheet">
