--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 	
 	<link rel="icon" href="imagenes/logo.png">
-
+	<meta name="keywords" content="ANIMALES, ANIMALISTAS, PERROS, GATOS, ADOPCION, TRANSITO">
+	<meta property="og:image" content="imagenes/logo.png">
+	<meta property="og:description" content="Alma Animal, organización sin fines de lucro que busca voluntarios y donaciones para la esterilización y el rescate de animales en estado de abandono">
+	<meta propety="og:url" content="https://alma-animal.netlify.app/">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shantell+Sans&display=swap" rel="stylesheet">
@@ -22,17 +25,17 @@
 		<img src="imagenes/logo.png" alt="logo" id="logo">
 		<h1 id="titulo"> Alma Animal</h1>
 		<nav class="navheader">
-			 <a href="" class="redes" target="_blanck"> <img src="imagenes/instagram.png" alt="instagram" class="img" ></a>	
-			 <a href="" class="redes" target="_blanck"> <img src="imagenes/twitter.png" alt="twitter" class="img" > </a>	
-			 <a href="" class="redes" target="_blanck"> <img src="imagenes/facebook.png" alt="facebook" class="img" > </a>	
+			 <a href="https://instagram.com/animalistasderosario?igshid=YmMyMTA2M2Y=" class="redes" target="_blanck"> <img src="imagenes/instagram.png" alt="instagram" class="img" ></a>	
+			 <a href="https://twitter.com/_animalistas?t=soqJ_xuFAep3VSUdARXviw&s=08" class="redes" target="_blanck"> <img src="imagenes/twitter.png" alt="twitter" class="img" > </a>	
+			 <a href="https://www.facebook.com/AnimalistasdeRosario?mibextid=ZbWKwL" class="redes" target="_blanck"> <img src="imagenes/facebook.png" alt="facebook" class="img" > </a>	
 		</nav>
 	</div>
 	<main>
 		<nav id="nav1">
 			<ul>
-				<li> <a href="">ADOPCIONES</a> </li> 
-				<li> <a href="">ESTERILIZACIONES</a> </li>
-				<li> <a href="">SER PARTE</a> </li> 
+				<li> <a href="paginas/adopcion2.html">ADOPCIONES PERROS</a> </li> 
+				<br>
+				<li> <a href="paginas/ferias.html">FERIAS</a> </li> 
 			</ul>
 		</nav>
 		<div id="carousel"> 
@@ -63,13 +66,13 @@
 		</div>
 		<nav id="nav2">
 			<ul>
-				<li> <a href="">FERIAS</a> </li> 
-				<li> <a href="">ACTIV. BENEFICAS</a> </li>
-				<li> <a href="">DONACIONES</a> </li> 
+				<li> <a href="paginas/adopcion.html">ADOPCIONES GATOS</a> </li> 
+				<br>
+				<li> <a href="paginas/pagina2.html">DONACIONES</a> </li> 
 			</ul>
 		</nav>
 		<div id="perros">
-			<a href=""> 
+			<a href="paginas/adopcion2.html"> 
 				<img src="imagenes/perro.png" alt="logoperro">
 				<h3>perritos en adopcion</h3> 
 			</a>
@@ -79,12 +82,10 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			consequat. </p>
 		</div>
 		<div id="gatos">
-			<a href=""> 
+			<a href="paginas/adopcion.html"> 
 				<img src="imagenes/gato.png" alt="logogato">
 				<h3>gatitos en adopcion</h3>
 			</a>
